fixed header z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ header {
   /* margin: 0 80px; */
   position: sticky;
   top: 0;
+  z-index: 9999999;
   .container {
     display: flex;
     width: 100vw;
